--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.4",
     "prettier": "^2.4.1",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
