--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
         ],
         "import/no-extraneous-dependencies": [
             "error",
-            { "devDependencies": ["**/*.spec.js", "jest.config.ts"] }
+            { "devDependencies": ["**/*.spec.ts", "**/*.spec.js", "jest.config.ts"] }
         ],
         "prettier/prettier": "error"
     },
