--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.1073.0",
     "bcrypt": "^5.0.1",
     "csv-parse": "^4.16.3",
     "dayjs": "^1.10.7",
