--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_API_URL=
+
 FORGOT_MAIL_URL=
 
 DISK_STORAGE=
@@ -7,3 +9,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
 AWS_REGION=
+AWS_BUCKET_URL=
