--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,12 @@ APP_API_URL=
 FORGOT_MAIL_URL=
 
 DISK_STORAGE=
+MAIL_PROVIDER=
 
 ## AWS Credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
-AWS_REGION=
+AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
+AWS_REGION=
