:memo: Change informations in README

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ APP_API_URL=
 
 FORGOT_MAIL_URL=
 
+## Storage Configuration (s3 or local) 
 DISK_STORAGE=
+## Mail Configuration (ses or ethereal) 
 MAIL_PROVIDER=
 
 ## AWS Credentials
