--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@sentry/node": "^6.17.7",
+    "@sentry/tracing": "^6.17.7",
     "aws-sdk": "^2.1073.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
